--- a/src/GUITest/OptimizationProcess1.form
+++ b/src/GUITest/OptimizationProcess1.form
@@ -24,16 +24,16 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel1" min="-2" pref="701" max="-2" attributes="0"/>
-                  <Component id="jLabel2" min="-2" pref="715" max="-2" attributes="0"/>
+                  <Component id="titleLabel" min="-2" pref="701" max="-2" attributes="0"/>
+                  <Component id="title2Label" min="-2" pref="715" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="26" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel3" alignment="1" min="-2" pref="161" max="-2" attributes="0"/>
-                  <Component id="jButton1" alignment="1" min="-2" pref="64" max="-2" attributes="0"/>
+                  <Component id="loggedInLabel" alignment="1" min="-2" pref="161" max="-2" attributes="0"/>
+                  <Component id="nextButton" alignment="1" min="-2" pref="64" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -43,20 +43,20 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLabel3" min="-2" pref="27" max="-2" attributes="0"/>
+              <Component id="loggedInLabel" min="-2" pref="27" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
-              <Component id="jLabel1" min="-2" pref="61" max="-2" attributes="0"/>
+              <Component id="titleLabel" min="-2" pref="61" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jLabel2" min="-2" pref="50" max="-2" attributes="0"/>
+              <Component id="title2Label" min="-2" pref="50" max="-2" attributes="0"/>
               <EmptySpace pref="188" max="32767" attributes="0"/>
-              <Component id="jButton1" min="-2" pref="30" max="-2" attributes="0"/>
+              <Component id="nextButton" min="-2" pref="30" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="jLabel1">
+    <Component class="javax.swing.JLabel" name="titleLabel">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="24" style="0"/>
@@ -64,7 +64,7 @@
         <Property name="text" type="java.lang.String" value="Here is where you can start an Optimization. Follow the steps "/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel2">
+    <Component class="javax.swing.JLabel" name="title2Label">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="24" style="0"/>
@@ -72,7 +72,7 @@
         <Property name="text" type="java.lang.String" value="and if you have any doubts click this icon () that will give you a tip"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="nextButton">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="2" name="C:\Users\Ricardo\Desktop\arrowRight.png"/>
@@ -85,7 +85,7 @@
         <Property name="focusable" type="boolean" value="false"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel3">
+    <Component class="javax.swing.JLabel" name="loggedInLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Logged in as : @var"/>
       </Properties>
